unpackaged/main/default/objects/ZdProfile__c/ZdProfile__c.object-meta.xml
<CustomObject>
    <description>Represents Zendesk customer profile.</description>
    <label>ZdProfile</label>
    <nameField>
        <displayFormat>ZDF-{0000000000}</displayFormat>
        <label>Zd Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZdProfile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>