unpackaged/main/default/objects/ZdProfile__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Zendesk Profiles</relationshipLabel>
    <relationshipName>ZdProfile</relationshipName>
    <type>Lookup</type>
</CustomField>