unpackaged/main/default/objects/ZdProfile__c/fields/ZdPVHUserId__c.field-meta.xml
<CustomField>
    <fullName>ZdPVHUserId__c</fullName>
    <externalId>true</externalId>
    <label>ZdPVHUserId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>